istio/locality-loadBalancer-setting/ns-back.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    istio-injection: enabled
