istio/locality-loadBalancer-setting/ng-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v1
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: v1
  template:
    metadata:
      labels:
        app: nginx
        version: v1
    spec:
      containers:
        - image: docker.io/bharamicrosystems/nginx:v1
          imagePullPolicy: IfNotPresent
          name: nginx
          ports:
            - containerPort: 80
      nodeSelector:
        topology.kubernetes.io/zone: us-central1-a
