istio/locality-loadBalancer-setting/ng-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v2
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: v2
  template:
    metadata:
      labels:
        app: nginx
        version: v2
    spec:
      containers:
        - image: docker.io/bharamicrosystems/nginx:v2
          imagePullPolicy: IfNotPresent
          name: nginx
          ports:
            - containerPort: 80
      nodeSelector:
        topology.kubernetes.io/zone: us-central2-a
