istio/locality-loadBalancer-setting/sleep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep
  namespace: frontend
spec:
  replicas: 6
  selector:
    matchLabels:
      app: sleep
  template:
    metadata:
      labels:
        app: sleep
    spec:
      containers:
        - name: sleep
          image: tutum/curl
          command: ["/bin/sleep","infinity"]
          imagePullPolicy: IfNotPresent
