istio/locality-loadBalancer-setting/ng-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: backend
  labels:
    app: nginx
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 80
  selector:
    app: nginx
