istio/locality-loadBalancer-setting/sleep-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sleep
  namespace: frontend
  labels:
    app: sleep
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: sleep
