istio/locality-loadBalancer-setting/ng-vs-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
  namespace: backend
spec:
  hosts:
    - nginx
  http:
    - route:
        - destination:
            host: nginx
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx
  namespace: backend
spec:
  host: nginx
  trafficPolicy:
    #outlierDetection:
    #  consecutiveErrors: 7
    #  interval: 30s
    #  baseEjectionTime: 30s
    loadBalancer:
      localityLbSetting:
        enabled: true
        distribute:
          - from: us-central1/us-central1-a/*
            to:
              "us-central1/us-central1-a/*": 100
          - from: us-central2/us-central2-a/*
            to:
              "us-central2/us-central2-a/*": 100
